# credity

./: .env.example  .env.production.example  .gitignore  CHANGES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  PRD.md  RAILWAY.md  README.md  Raghav_Badhwar.md  Raghav_Badhwar_Master_Plan.md  SECURITY.md  SECURITY_AUDIT_SUMMARY.md  package-lock.json  package.json
.github/workflows/: backend-ci.yml  gateway-ci.yml
BlockWalletDigi/: package-lock.json  package.json
BlockWalletDigi/.git_backup/: COMMIT_EDITMSG  index
CredVerseIssuer 3/: package-lock.json  package.json  vitest.config.ts
CredVerseRecruiter/: package-lock.json  package.json
backend-api/: .env.example  Dockerfile  README.md  docker-compose.dev.yaml  pyproject.toml  requirements.txt
backend-api/src/: __init__.py  main.py
backend-api/src/api/: __init__.py
backend-api/src/api/routes/: __init__.py  auth.py  connections.py  credentials.py  health.py  notifications.py  trust_score.py  verification.py
backend-api/src/core/: __init__.py  config.py  security.py
backend-api/src/db/: __init__.py  session.py
backend-api/src/db/models/: __init__.py  connection.py  credential.py  notification.py  token.py  user.py  verification.py
backend-api/src/services/: __init__.py  otp.py  sharing.py  storage.py  trust_score.py  verification.py  webhooks.py
backend-api/src/workers/: __init__.py  tasks.py
backend-api/tests/: conftest.py  test_auth.py  test_connections.py  test_credentials.py  test_health.py  test_trust_score.py  test_verification.py
credverse-gateway/: package-lock.json  package.json  railway.toml
(+165 files in other folders)
